--- a/dist.ini
+++ b/dist.ini
@@ -30,4 +30,5 @@ List::MoreUtils       = 0.33
 Moo                   = 1.003001
 Scalar::Util          = 1.32
 XML::LibXML           = 2.0019
-YAML::Tiny            = 1.61
+YAML::Tiny            = 1.64
+Test::LongString      = 0.16
