--- a/dist.ini
+++ b/dist.ini
@@ -2,17 +2,45 @@ name    = MySQL-Workbench-Parser
 author  = Renee Baecker <reneeb@cpan.org>
 license = Artistic_2_0
 copyright_holder = Renee Baecker
-copyright_year   = 2013
-
-[VersionFromModule]
-
-[PodWeaver]
+copyright_year   = 2018
 
 [PodCoverageTests]
 [PodSyntaxTests]
 
-[@Basic]
+[Git::Contributors]
+include_authors = 1
+
+[VersionFromModule]
+[PodWeaver]
+
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
 [@Git]
+[MetaJSON]
+
+[MetaProvides::Package]
+
+[ReadmeAnyFromPod / MarkdownInRoot]
+phase = build
+
+[ReadmeAnyFromPod / TextInBuild]
+phase = build
+
+[GitHubREADME::Badge]
+badges = travis
+badges = cpants
+badges = issues
+phase = build
+place = top
+
+[ReadmeAddDevInfo]
+phase = build
+before = # AUTHOR
+
+[ContributorsFile]
+filename = CONTRIBUTORS
 
 [MetaResources]
 homepage = http://github.com/reneeb/MySQL-Workbench-Parser
@@ -31,4 +59,6 @@ Moo                   = 1.003001
 Scalar::Util          = 1.32
 XML::LibXML           = 2.0019
 YAML::Tiny            = 1.64
+
+[Prereqs / TestRequires]
 Test::LongString      = 0.16
