fix: add new test dependency in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -64,3 +64,4 @@ YAML::Tiny            = 1.64
 [Prereqs / TestRequires]
 Test::LongString      = 0.16
 Test::Exception       = 0
+Capture::Tiny         = 0
