update list of prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -57,7 +57,9 @@ File::Basename        = 2.82
 File::Spec            = 3.40
 List::MoreUtils       = 0.33
 Moo                   = 1.003001
+Parse::RecDescent     = 0
 Scalar::Util          = 1.32
+SQL::Translator       = 1.61
 XML::LibXML           = 2.0019
 YAML::Tiny            = 1.64
 perl                  = 5.008006
